Fix spacing too wide between header and page

--- a/resources/css/search-header.pcss
+++ b/resources/css/search-header.pcss
@@ -5,7 +5,6 @@
 .search-header__inner-layout {
   display: flex;
   flex-direction: column;
-  margin-bottom: 24px;
 }
 
 .search-header-body {
